trunk/Archive2/ea/0e0774ae4a23c4/output
main.cpp:6:4: error: invalid token in macro parameter list
if(1337!=1337)
   ^
1 error generated.
